working on tablet screen size and fixing top navigation bar

--- a/css/codeup-design.css
+++ b/css/codeup-design.css
@@ -23,6 +23,19 @@ background-color: #f0f0f0;
     padding: 0;
 }
 
+#rectangle-2 {
+
+    height: 125px;
+    width: 100%;
+    background-color: white;
+    margin: 50px 0 30px 0;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    padding: 0;
+}
+
+
 .col-12 {
     padding: 0;
 }
